fix: update title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			hljs.highlightAll();
 		</script>
 
-		<title>CV Tsvetinskaya Lidiya</title>
+		<title>Tsvetinskaya Lidiya - CV</title>
 	</head>
 	<body class="body">
 		<div class="container">
